docs: исправление примеров Healthcheck в Swagger
- Разделены DTO для успешного (200) и ошибочного (503) ответов здоровья системы.
- В структуре HealthResponse удалено поле Detail, чтобы оно не путало в успешном ответе.
- Добавлена структура HealthErrorResponse для детального описания проблем с зависимостями.
